--- a/03_01.vcxproj
+++ b/03_01.vcxproj
@@ -108,6 +108,7 @@
     <ClCompile Include="C:\KamataEngine\Adapter\Novice.cpp" />
     <ClCompile Include="GameObject\Player\Player.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Utility\InputManager\InputManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="C:\KamataEngine\DirectXGame\math\Matrix4x4.h" />
@@ -137,6 +138,7 @@
     <ClInclude Include="C:\KamataEngine\DirectXGame\scene\GameScene.h" />
     <ClInclude Include="C:\KamataEngine\Adapter\Novice.h" />
     <ClInclude Include="GameObject\Player\Player.h" />
+    <ClInclude Include="Utility\InputManager\InputManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
