--- a/03_01.vcxproj
+++ b/03_01.vcxproj
@@ -106,6 +106,8 @@
     <ClCompile Include="C:\KamataEngine\DirectXGame\base\TextureManager.cpp" />
     <ClCompile Include="C:\KamataEngine\DirectXGame\2d\ImGuiManager.cpp" />
     <ClCompile Include="C:\KamataEngine\Adapter\Novice.cpp" />
+    <ClCompile Include="GameObject\Bullet\Bullet.cpp" />
+    <ClCompile Include="GameObject\Enemy\Enemy.cpp" />
     <ClCompile Include="GameObject\Player\Player.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Utility\InputManager\InputManager.cpp" />
@@ -137,6 +139,8 @@
     <ClInclude Include="C:\KamataEngine\DirectXGame\input\Input.h" />
     <ClInclude Include="C:\KamataEngine\DirectXGame\scene\GameScene.h" />
     <ClInclude Include="C:\KamataEngine\Adapter\Novice.h" />
+    <ClInclude Include="GameObject\Bullet\Bullet.h" />
+    <ClInclude Include="GameObject\Enemy\Enemy.h" />
     <ClInclude Include="GameObject\Player\Player.h" />
     <ClInclude Include="Utility\InputManager\InputManager.h" />
   </ItemGroup>
