--- a/03_01.vcxproj
+++ b/03_01.vcxproj
@@ -149,6 +149,7 @@
     <ClInclude Include="GameObject\BackGround\BackGround.h" />
     <ClInclude Include="GameObject\Bullet\Bullet.h" />
     <ClInclude Include="GameObject\Enemy\Enemy.h" />
+    <ClInclude Include="GameObject\Enemy\IEnemyState.h" />
     <ClInclude Include="GameObject\Player\Player.h" />
     <ClInclude Include="GameObject\Scene\IScene.h" />
     <ClInclude Include="GameObject\Scene\SceneState\Game\GameSceneState.h" />
